testsuite/poke.pkl/printf-diag-5.pk
/* { dg-do compile } */

printf "%i32x %i32x", 1, 2, 3; /* { dg-error "" } */
